@@ -11,6 +11,9 @@ Incompatible changes
 Deprecated
 ----------
 
+* LaTeX ``\sphinxstylethead`` is deprecated at 1.6 and will be removed at 1.7.
+  Please move customization into new macro ``\sphinxstyletheadfamily``.
+
 Features added
 --------------
 
@@ -33,6 +36,7 @@ Bugs fixed
 * #3714: viewcode extension not taking ``highlight_code='none'`` in account
 * #3698: Moving :doc: to std domain broke backwards compatibility
 * #3633: misdetect unreferenced citations
+* LaTeX tables do not allow multiple paragraphs in a header cell
 
 Testing
 --------
